# poetry_mannual

./: README.md
docs/: poetry_mannual.md
poetry-demo/: pyproject.toml
