[tool.poetry]
name = "poetry-demo"
version = "0.2.0"
description = ""
authors = ["Zack Chang <zhangchunyucoldfish@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
pandas = "^2.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
